<?xml version="1.0"?>
<package format="3">
  <name>unitree_legged_msgs</name>
  <version>0.0.0</version>
  <description>
    The unitree legged messgaes package.
  </description>
  <maintainer email="bruk@signaltech.xyz">bruk</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
  
</package>