<?xml version="1.0"?>
<package format="2">
  <name>unitree_robots_description</name>
  <version>1.0.0</version>
  <description>The Unitree H1 Description Package</description>

  <maintainer email="bruk@signaltech.xyz">bruk</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gz-sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>